# PETGUI

./: .dockerignore  .gitignore  DieterichLab_CA.pem  Dockerfile  Jenkinsfile  LICENSE  PETGUI user evaluation form.odt  Pipfile  README.md  conf.yaml  hello.py  logging.txt  mappings.txt  predict.sh  pyproject.toml  requirements.txt  script.sh  setup.py  start_prod.sh  train.sh
.cache/fontconfig/: 3830d5c3ddfd5cd38a049b759396e72e-le64.cache-8  4c599c202bc5c08e2d34565a40eac3b2-le64.cache-8  7ef2298fde41cc6eeb7af42e48b7d293-le64.cache-8  d589a48862398ed80a3d6066f4f56f4c-le64.cache-8
.cache/matplotlib/: fontlist-v330.json
Dockerfile.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PETGUI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Pet/: __init__.py
Pet/cli/: __init__.py
Pet/examples/: custom_task_metric.py  custom_task_processor.py  custom_task_pvp.py
Pet/log/: __init__.py
Pet/pet/: __init__.py  modeling.py  preprocessor.py  pvp.py  task_helpers.py  (+2 more)
app/: pet-gui.py  petGui.py  petgui.py
celery_tasks/: tasks.py
conf/: ORGANISATION-NAME_CA.pem  conf.yaml  predict.sh  train.sh
config/: celery_config.py  celery_utils.py
data/: predict.txt  unlabeled.csv  unlabeled.txt
example/: README.md  conf.yaml
pet/: cli.py  predict.py  requirements.txt  run.py  script.py
petgui/: __init__.py
routers/: training.py  university.py
templates/: final_page.html  index.html  login.html  next.html  progress.html  results.html  run.html  start.html  train.html  train_test.html
tests/: in_memory_backend_mock.py  session_service.py  test_petGui.py  test_petgui.py
(+26 files in other folders)
